--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -123,4 +123,22 @@ img {
 	margin: 7px 0 0 0;
 
 }
-
+section {
+	padding: 80px 0;
+}
+.section-header {
+	text-align: center;
+}
+section h2{
+	margin: 20px 0 40px;
+}
+section h3 {
+	margin: 30px 0 10px;
+}
+.row {
+	text-align: center;
+	padding-left: 120px;
+}
+.lead {
+	text-align: center;
+}
