final project features commit

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -152,6 +152,9 @@ section h3 {
 	color: white;
 	text-align: center;
 }
+#project-features{
+	text-align: center;
+}
 /*=======custom icon sprites=================*/
 
 i.ci {
