changes to modal button and adding instructor section

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -155,6 +155,15 @@ section h3 {
 #project-features{
 	text-align: center;
 }
+#featurette {
+	background: url('../img/stuff-bg.jpg') 50% 100% repeat fixed;
+	background-size: cover;
+	text-align: center;
+	color: white;
+}
+#instructor {
+	background: white url('../img/brad-elvis.png') 90% -10px no-repeat;
+}
 /*=======custom icon sprites=================*/
 
 i.ci {
