--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -33,6 +33,19 @@ h3{
 h4 {
 	font-size: 18px;
 }
+p{
+	margin: 0 0 15px;
+}
+p.lead {
+	font-weight: normal
+}
+a:link, a:visited {
+	color: #dd5638;
+}
+a:hover {
+	text-decoration: none;
+	color: #c9302c;
+}
 button, input, .btn, a.btn {
 	color: white;
 	-webkit-font-smoothing: antialiased;
@@ -42,6 +55,9 @@ button, input, .btn, a.btn {
 .btn {
 	font-weight: bold;
 
+}
+button.btn:focus {
+	outline: none !important;
 }
 .btn-danger {
 	background-color: #dd5638;
@@ -168,6 +184,9 @@ blockquote:before {
 	display: block; 
 }
 /*=============LAYOUT=============== */
+.row + .row {
+	margin-top: 20px;
+}
 
 #optin {
 	background: #3e4249;
@@ -202,9 +221,6 @@ section h3 {
 }
 #who-benefits {
 	background:white;
-}
-.col-sm-5 {
-	padding-left: 150px;
 }
 #course-features {
 	background: #3e4249;
@@ -283,6 +299,31 @@ section h3 {
 #signup .btn {
 	font-size: 24px;
 }
+footer {
+	background: #3e4249;
+	color: white;
+	padding: 20px 0 10px;
+	font-size: 12px;
+	text-align: center;
+	font-size: 16px;
+}
+footer p {
+	margin: 0;
+
+}
+footer a:link, footer a:visited {
+	color: white;
+}
+footer a:hover {
+	color: #dd5638;
+}
+footer li.signup-link a {
+	color: #dd5638;
+}
+footer li.signup-link a:hover {
+	font-weight: bold;
+
+}
 /*=======custom icon sprites=================*/
 
 i.ci {
@@ -298,3 +339,33 @@ i.ci {
 .ci.ci-community {background-position: -120px 0;}
 .ci.ci-instructor {background-position: -160px 0; }
 .ci.ci-device {background-position: -200px 0; }
+
+/* ============media queries========*/
+@media screen and (max-width : 991px) {
+	#instructor .container {
+		background: rgba(255,255,255,0.8);
+		padding: 20px;
+	}
+}
+@media screen and (max-width: 768px) {
+	.logo {
+		width: 50%;
+	}
+	#optin p{
+		margin: 0 0 10px;
+	}
+	#featurette iframe {
+ 		height: 240px;
+	}
+}
+@media screen and (max-width: 568px ) {
+	#instructor .num {
+		height: 100px;
+		width: 100px;
+		font-size: 22px;
+	}
+
+	#instructor .num span {
+		font-size: 16px;
+	}
+}
