--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,83 +1,120 @@
-/* colour references
+/* COLOUR REFERENCES
 
-Green: #79b044
-Salmon: #dd5638
-Blue Gray: #ee4249
+Green:		#79b044
+Salmon:		#dd5638
+Blue Gray:  #3e4249
 
 */
 
-/* ======GENERAL==============*/
+/* ==== GENERAL ==== */
 
-body{
+body {
 	margin-top: 50px;
 	font-family: 'proxima-nova', 'Raleway', Helvetica, sans-serif;
 	font-size: 16px;
 	background: url('../img/tile.jpg') top left repeat;
 }
 
-/* ===GLOBAL====*/
+/* ==== GLOBAL ==== */
+
 h1,h2,h3,h4,h5,h6 {
 	-webkit-font-smoothing: antialiased;
-	text-rendering: optimizeLegibility;
+	text-rendering: optimizelegibility;
 	font-weight: bold;
 }
+
 h1 {
 	font-size: 3em;
 }
-h1,h2{
+
+h1,h2 {
 	margin: 0 0 40px;
 }
-h3{
+
+h3 {
 	margin: 20px 0;
 }
+
 h4 {
 	font-size: 18px;
 }
-p{
+
+p.lead {
+	font-weight: normal;
+}
+
+p {
 	margin: 0 0 15px;
 }
-p.lead {
-	font-weight: normal
-}
+
 a:link, a:visited {
 	color: #dd5638;
 }
+
 a:hover {
 	text-decoration: none;
 	color: #c9302c;
 }
-button, input, .btn, a.btn {
-	color: white;
-	-webkit-font-smoothing: antialiased;
-	text-rendering: optimizeLegibility;
 
+blockquote {
+	padding: 0;
+	border: none;
+	font-style: italic;
+	text-align: left;
 }
-.btn {
-	font-weight: bold;
 
+blockquote cite {
+	display: block;
+	color: #777;
+	margin: 15px 0 0 0;
 }
-button.btn:focus {
-	outline: none !important;
-}
-.btn-danger {
-	background-color: #dd5638;
-	border-color: #d95131;
-}
-.btn-success {
-	background: #79b044;
-	border:none;
 
-}
-.btn-success:hover {
-	background: #6a9b3d;
-	border-color: #6a9b3d;
+blockquote:before {
+	display: none;
 }
 
 img {
 	max-width: 100%;
 }
 
-.modal-content {
+button, input, .btn, a.btn {
+	-webkit-font-smoothing: antialiased;
+	text-rendering: optimizelegibility;
+	color: white;
+}
+
+.btn {
+	font-weight: bold;
+}
+
+.btn:focus {
+	outline: none;
+}
+
+.btn-success {
+	background: #79b044;
+	border: none;
+}
+
+.btn-success:hover {
+	background: #6a9b3d;
+	border-color: #6a9b3d;
+}
+
+.btn-danger {
+	background-color: #dd5638;
+	border-color: #d95131;
+}
+
+.text-danger, li.text-danger a {
+	color: #dd5638;
+}
+
+a.text-danger:hover {
+	color: #e55939;
+}
+
+.modal-content{
 	background: url('../img/tile.jpg') top left repeat;
 }
 
@@ -95,69 +132,157 @@ img {
 	border-radius: 50px;
 	color: white;
 }
+
 .badge.social.twitter:hover {
 	background: #55acee;
 }
+
 .badge.social.facebook:hover {
 	background: #3b5998;
 }
+
 .badge.social.gplus:hover {
 	background: #db4b39;
 }
 
-blockquote {
-	padding: 0;
-	border:none;
-	font-style: italic;
-	text-align: left;
+/* === CUSTOM ICON SPRITES === */
 
+i.ci {
+	display: inline-block;
+	height: 40px;
+	width: 40px;
+	background: url('../img/icon-sprite.png') no-repeat;
 }
-blockquote cite {
+
+.ci.ci-computer 	{ background-position: 0 0; }
+.ci.ci-watch		{ background-position: -40px 0; }
+.ci.ci-calendar		{ background-position: -80px 0; }
+.ci.ci-community	{ background-position: -120px 0; }
+.ci.ci-instructor	{ background-position: -160px 0; }
+.ci.ci-device		{ background-position: -200px 0; }
+
+/* ==== FORMS ==== */
+
+label {
 	display: block;
-	color: #777;
-	margin: 15px 0 0 0;
-}
-blockquote:before {
-	display: none;
+	font-weight: bold;
 }
 
+input[type="text"],
+input[type="email"],
+input[type="url"],
+input[type="password"],
+input[type="search"],
+textarea {
+	color: #666;
+	border: 1px solid #ccc;
+	border-radius: 3px;
+	display: block;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	width: 100%;
+	padding: 6px 12px;
+}
 
+input[type="submit"],
+button[type="submit"] {
+	display: inline-block;
+	margin-bottom: 0;
+	font-size: 18px;
+	font-weight: bold;
+	line-height: 1.33;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: middle;
+	cursor: pointer;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	background-image: none;
+	border: none;
+	border-radius: 6px;
+}
 
+input[type="submit"]:hover,
+button[type="submit"]:hover {
+	outline: none;
+	border: none;
+	background: #aaa;
+}
 
+form.search-form .form-group {
+	margin: 0;
+}
 
-/* ======HERO=============*/
+form.search-form .input-group {
+	width: 100%;
+}
+
+form.search-form .input-group input[type="search"],
+form.search-form .input-group input[type="text"] {
+	width: 70%;
+}
+
+form.search-form .input-group input[type="submit"] {
+	width: 30%;
+	border-top-left-radius: 0;
+	border-bottom-left-radius: 0;
+	float: right;
+}
+
+form textarea {
+	width: 100%;
+	border: 1px solid #ccc;
+	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+	box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+}
+
+/* ==== HERO ==== */
+
 #hero {
 	background: url('../img/hero-bg.jpg') 50% 0 repeat fixed;
 	min-height: 500px;
+	position: relative;
+	display: table;
+	width: 100%;
 	padding: 40px 0;
 	color: white;
 	-webkit-font-smoothing: antialiased;
-	text-rendering: optimizeLegibility;
+	text-rendering: optimizelegibility;
 }
-#hero article {
-	width: 100%;
-	text-align: center;
+
+#hero article { 
+  width: 100%;
+  text-align: center;
+  display: table-cell;
+  vertical-align: middle;
 }
 
 #hero .hero-text {
 	margin-top: 30px;
 }
+
 #price-timeline {
 	margin: 30px 0 60px;
 	text-align: center;
 }
+
 #price-timeline .price {
 	display: inline-block;
-	margin: 0 2% 0 0;
 	width: 30%;
+	margin: 0 2% 0 0;
 	background: #3e4249;
 	padding: 10px 20px 30px;
 	position: relative;
-	vertical-align: top; 
+	vertical-align: top;
 }
+
 #price-timeline .price.active {
-	background: #dd5638; 
+	background: #dd5638;
 }
+
 #price-timeline .price span {
 	background: #101010;
 	display: block;
@@ -171,60 +296,68 @@ blockquote:before {
 	-webkit-border-radius: 100%;
 	-moz-border-radius: 100%;
 	position: absolute;
-	bottom: -35px !important; 
-	left: 50% !important;
+	bottom: -35px;
+	left: 50%;
 	margin-left: -35px;
 }
+
 #price-timeline h4 {
 	margin: 0 0 10px;
 }
+
 #price-timeline h4 small {
 	color: white;
 	font-weight: bold;
-	display: block; 
+	display: block;
 }
-/*=============LAYOUT=============== */
+
+
+/* ==== LAYOUT ==== */
+
 .row + .row {
 	margin-top: 20px;
 }
 
-#optin {
-	background: #3e4249;
-	padding: 20px 0;
-	color: white;
-	-webkit-font-smoothing: antialiased;
-	text-rendering: optimizeLegibility;
-	font-size: 1.2em;
-}
-
-#optin p {
-	margin: 7px 0 0 0;
-
-}
 section {
 	padding: 80px 0;
 }
+
 .section-header {
 	text-align: center;
 }
-section h2{
+
+section h2 {
 	margin: 20px 0 40px;
 }
+
 section h3 {
 	margin: 30px 0 10px;
 }
-.feature-image {
+
+section.main-content {
+	padding: 40px 0;
+}
+
+#primary {
+	padding-top: 40px;
+	padding-bottom: 40px;
+}
+
+.feature-image {	
 	display: table;
 	width: 100%;
 }
+
 .feature-image-default {
 	background: url('../img/stuff-feature.jpg') no-repeat;
 	background-size: cover;
 }
+
 .feature-image-default-alt {
 	background: url('../img/hipster-stuff.jpg') no-repeat;
 	background-size: cover;
 }
+
 .feature-image h1 {
 	display: table-cell;
 	vertical-align: middle;
@@ -232,42 +365,54 @@ section h3 {
 	color: white;
 }
 
+#optin {
+	background: #3e4249;
+	padding: 20px 0;
+	color: white;
+	-webkit-font-smoothing: antialiased;
+	text-rendering: optimizelegibility;
+	font-size: 1.2em;
+}
 
-.row {
-	text-align: center;
+#optin p {
+	margin: 7px 0 0 0;
 }
-.lead {
-	text-align: center;
-}
-#who-benefits {
-	background:white;
-}
+
 #course-features {
 	background: #3e4249;
 	color: white;
 	text-align: center;
 }
-#project-features{
+
+#who-benefits {
+	background: white;
+}
+
+#project-features {
 	text-align: center;
 }
+
 #featurette {
 	background: url('../img/stuff-bg.jpg') 50% 100% repeat fixed;
 	background-size: cover;
 	text-align: center;
 	color: white;
 }
+
 #instructor {
 	background: white url('../img/brad-elvis.png') 90% -10px no-repeat;
 }
+
 #instructor h2 {
 	margin: 0 0 20px;
 }
+
 #instructor .num {
 	display: table;
 	font-size: 30px;
 	font-weight: bold;
 	color: white;
-	line-height: 24px; 
+	line-height: 24px;
 	height: 140px;
 	width: 140px;
 	text-align: center;
@@ -275,9 +420,8 @@ section h3 {
 	-webkit-border-radius: 100%;
 	-moz-border-radius: 100%;
 	border-radius: 100%;
-		-webkit-font-smoothing: antialiased;
-	text-rendering: optimizeLegibility;
-
+	-webkit-font-smoothing: antialiased;
+	text-rendering: optimizelegibility;
 }
 
 #instructor .num .num-content {
@@ -289,63 +433,70 @@ section h3 {
 	display: block;
 	font-size: 20px;
 	font-weight: normal;
-
 }
+
 #kudos {
 	text-align: center;
 }
+
 .testimonial {
 	margin-bottom: 60px;
 }
+
 .testimonial img {
-	-webkit-border-radius: 50%;
-	-moz-border-radius: 50%;
+	border-radius: 50%;
 }
+
 #signup {
 	text-align: center;
 	background: url('../img/hipster-stuff.jpg') center center repeat fixed;
 	background-size: cover;
 	color: white;
 	padding: 140px 0;
-
 }
+
 #signup h2 {
 	font-weight: normal;
 }
 
-#signup h2 strong{
+#signup h2 strong {
 	border-bottom: solid 2px #dd5638;
 }
+
 #signup .btn {
 	font-size: 24px;
 }
+
 footer {
 	background: #3e4249;
 	color: white;
 	padding: 20px 0 10px;
 	font-size: 12px;
-	text-align: center;
-	font-size: 16px;
 }
+
 footer p {
 	margin: 0;
-
 }
+
 footer a:link, footer a:visited {
 	color: white;
 }
+
 footer a:hover {
 	color: #dd5638;
 }
+
 footer li.signup-link a {
 	color: #dd5638;
 }
+
 footer li.signup-link a:hover {
 	font-weight: bold;
-
 }
-/*===========BLOG========*/
-.post {
+
+/* ==== BLOG ==== */
+
+.post, .widget, #comments {
 	position: relative;
 	border: solid 1px #ddd;
 	background: white;
@@ -353,21 +504,28 @@ footer li.signup-link a:hover {
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
 	border-radius: 4px;
-
 }
+
 .post header,
-.post .post-excerpt {
+.post .post-excerpt,
+.post .post-body,
+#comments .comments-wrap {
 	padding: 20px;
 }
-.post header h3,
-.post header h1 {
+
+.post header h3 {
 	margin: 0 0 15px;
 	padding: 0 0 15px;
 	border-bottom: solid 1px #ddd;
 }
-.post-header h1 {
+
+.post header h1 {
+	margin: 0 0 15px;
+	padding: 0 0 15px;
+	border-bottom: solid 1px #ddd;
 	font-size: 24px;
 }
+
 .post-image {
 	height: auto;
 }
@@ -376,13 +534,17 @@ footer li.signup-link a:hover {
 	font-size: 12px;
 	width: 90%;
 }
-.post-details i.fa{
+
+.post-details i.fa {
 	padding-left: 10px;
 }
+
 .post-details i.fa:first-child {
 	padding: 0;
 }
-/* =========COMMENTS ============*/
+
+/* === COMMENTS === */
+
 .post-comments-badge {
 	height: 70px;
 	width: 70px;
@@ -390,13 +552,14 @@ footer li.signup-link a:hover {
 	top: 25px;
 	right: 20px;
 	border: none;
-	-webkit-border-radius: 100%;
-	-moz-border-radius: 100%;
-	border-radius: 100%;
+	-webkit-border-radius: 100px;
+	-moz-border-radius: 100px;
+	border-radius: 100px;
 	background: #79b044;
 	text-align: center;
 	display: table;
 }
+
 .post-comments-badge a {
 	display: table-cell;
 	vertical-align: middle;
@@ -404,58 +567,134 @@ footer li.signup-link a:hover {
 	font-size: 20px;
 	line-height: 20px;
 }
+
 .post-comments-badge i.fa {
 	display: block;
 	font-size: 15px;
 	padding: 0;
 	margin-bottom: 4px;
-
 }
+
 .post-comments-badge:hover {
 	background-color: #8bc653;
 }
-/*=======custom icon sprites=================*/
 
-i.ci {
-	display: inline-block;
-	height: 40px;
-	width: 40px;
-	background: url('../img/icon-sprite.png') no-repeat;
+#comments h3 {
+	text-align: center;
 }
 
-.ci.ci-computer {background-position: 0 0; }
-.ci.ci-watch    {background-position: -40px 0; }
-.ci.ci-calendar {background-position: -80px 0; }
-.ci.ci-community {background-position: -120px 0;}
-.ci.ci-instructor {background-position: -160px 0; }
-.ci.ci-device {background-position: -200px 0; }
+#comments h4 {
+	font-size: 1.3em;
+}
 
-/* ============media queries========*/
+#comments ol {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+
+#comments ol li {
+	background: rgba(0,0,0,0.02);
+	padding: 10px 20px;
+	margin: 10px 0;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	border: solid 1px rgba(0,0,0,0.03);
+}
+
+#comments ol li ol.children {
+	padding: 0;
+	list-style: none;
+	font-size: 0.96em;
+}
+
+#leave-comment {
+	margin: 40px 0 0;
+	padding: 20px 0 0;
+	border-top: solid 1px #eee;
+}
+
+/* === RESOURCES === */
+
+.resource {
+	width: 31.33333333%;
+	float: left;
+	margin: 0 3% 40px 0;
+}
+
+.resource:nth-child(3n) {
+	margin-right: 0;
+}
+
+/* === WIDGETS === */
+
+.widget {
+	padding: 20px;
+}
+
+.widget h4 {
+	margin: 0 0 10px;
+	padding: 0 0 10px;
+	border-bottom: solid 1px #ddd;
+}
+
+.widget ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+.widget ul li {
+	margin: 0 0 5px;
+}
+
+.widget ul li:hover {
+	position: relative;
+	left: 1px;
+}
+
+/* ==== MEDIA QUERIES ==== */
+
 @media screen and (max-width : 991px) {
 	#instructor .container {
 		background: rgba(255,255,255,0.8);
 		padding: 20px;
 	}
 }
-@media screen and (max-width: 768px) {
+
+@media screen and (max-width : 768px) {
 	.logo {
 		width: 50%;
 	}
-	#optin p{
+	
+	#optin p {
 		margin: 0 0 10px;
 	}
+	
 	#featurette iframe {
- 		height: 240px;
+		height: 240px;
+	}
+	
+	.resource {
+		width: 48%;
+		margin-right: 2%;
 	}
 }
-@media screen and (max-width: 568px ) {
+
+@media screen and (max-width : 568px) {
 	#instructor .num {
 		height: 100px;
 		width: 100px;
 		font-size: 22px;
 	}
-
+	
 	#instructor .num span {
 		font-size: 16px;
+	}
+	
+	.resource {
+		width: 100%;
+		margin-right: 0;
 	}
 }
